Support JDK17 (#660)
* Reproduce #600 (JDK17 error)
* Add workaround for Java17
* Add a helpful error message
* Add note on JDK17